--- a/document/book.bib
+++ b/document/book.bib
@@ -70,88 +70,6 @@ This article supports view that things should be looked at in terms of polymorph
 ~}
 }
 
-@article{longRelationshipsPitchMemory1977,
-  title = {Relationships {{Between Pitch Memory}} in {{Short Melodies}} and {{Selected Factors}}},
-  volume = {25},
-  issn = {0022-4294, 1945-0095},
-  doi = {10.2307/3345268},
-  language = {en},
-  number = {4},
-  journal = {Journal of Research in Music Education},
-  author = {Long, Peggy A.},
-  month = dec,
-  year = {1977},
-  pages = {272-282},
-  file = {/Users/davidjohnbaker/Zotero/storage/NFMPA9DU/Long - 1977 - Relationships Between Pitch Memory in Short Melodi.pdf},
-  annote = {Notes on Long 1997
-
-length, tonal structure, contour, individual all contribute.
-
-Previous Structure and Tonalness are good predictors!
-
-In experiment had musical background as a predictor, but they elimnated people who were bad at singing
-
-~}
-}
-
-@article{taylorStrategiesMemoryShort1983,
-  title = {Strategies in Memory for Short Melodies: {{An}} Extension of {{Otto Ortmann}}'s 1933 Study.},
-  volume = {3},
-  issn = {2162-1535, 0275-3987},
-  shorttitle = {Strategies in Memory for Short Melodies},
-  doi = {10.1037/h0094258},
-  language = {en},
-  number = {1},
-  journal = {Psychomusicology: A Journal of Research in Music Cognition},
-  author = {Taylor, Jack A. and Pembrook, Randall G.},
-  year = {1983},
-  pages = {16-35},
-  file = {/Users/davidjohnbaker/Zotero/storage/B9PJX7PL/BuonviriPaney2015.pdf;/Users/davidjohnbaker/Zotero/storage/K2YYI4M3/Taylor and Pembrook - 1983 - Strategies in memory for short melodies An extens.pdf},
-  annote = {Notes on Taylor and Pembrook 1983
-
-Musical characteristics and features predict melodic memory scores.
-
-* Insights from Ortmann 1933????
-
-In addition to Ortmann variables
-
-- Musical Traning
-
-- Serial Position and Length
-
-- Music Context
-
-- Tonality
-
--Transposition
-
--Expectancy
-
--Octave Displacement
-
--Melodic Contour
-
-~
-
-====
-
-Study also suggests how to score simple melodies
-
-did not use age as covariate with big age span
-
-~}
-}
-
-@article{tallaricoStudyThreePhase1974,
-  title = {A {{Study}} of the {{Three Phase Concept}} of {{Memory}}: {{Its Musical Implications}}},
-  language = {en},
-  author = {Tallarico, P. Thomas},
-  year = {1974},
-  pages = {1-15},
-  file = {/Users/davidjohnbaker/Zotero/storage/2PNXUTZY/A Study of the Three Phase Concept of Memory Its .pdf},
-  annote = {Long discussion on STM and LTM but from ages ago}
-}
-
 @article{ouraConstructingRepresentationMelody1991a,
   title = {Constructing a {{Representation}} of a {{Melody}}: {{Transforming Melodic Segments}} into {{Reduced Pitch Patterns Operated}} on by {{Modifiers}}},
   volume = {9},
@@ -228,7 +146,10 @@ since 2000. Only four studies were found: Gillespie (2001) surveyed aural skills
 on their scoring of dictations; Norris (2003) studied the relationship between achievement in\\
 sight-singing and melodic dictation; Dooley and Deutsch (2010) asked whether having absolute\\
 pitch influences performance on musical dictation; and Paney and Buonviri (2014) interviewed\\
-high-school music teachers on their teaching of melodic dictation.\\
+high-school music teachers on their teaching of melodic dictation.
+
+~
+
 Older studies identified the following difficulty factors in the completion of dictation assessments:\\
 tempo (Hofstetter, 1981), tonality (Dowling, 1978; Long, 1977; Oura \& Hatano, 1988;\\
 Pembrook, 1986), size of intervals (Ortmann, 1933), conjunct versus disjunct motion\\
@@ -478,7 +399,7 @@ Waggoner (2011) discovered that undergraduate music majors were\\
 less adept at error detection when conducting a piece than when listening to a recording\\
 of it.
 
-Pembrook 1986 -- 7 - 11 Notes (Better with IC) 
+Pembrook 1986 -- 7 - 11 Notes (Better with IC)
 
 These results suggest that aural skills accuracy\\
 decreases as musical complexity increases, confirming findings by Byo (1997).
@@ -733,11 +654,11 @@ Root
   file = {/Users/davidjohnbaker/Zotero/storage/JNUHVKXN/ortmann1983.pdf;/Users/davidjohnbaker/Zotero/storage/5KQGFQYC/1934-00506-001.html}
 }
 
-@article{millerMagicalNumberSeven,
+@article{millerMagicalNumberSeven1956,
   title = {The {{Magical Number Seven}}, {{Plus}} or {{Minus Two}}: {{Some Limits}} on {{Our Capacity}} for {{Processing Information}}},
   language = {en},
   author = {Miller, George A},
-  pages = {16},
+  year = {1956},
   file = {/Users/davidjohnbaker/Zotero/storage/ED3TZ929/Miller - The Magical Number Seven, Plus or Minus Two Some .pdf}
 }
 
@@ -917,7 +838,8 @@ Article ends with suggesting actual ways to get better at things}
   journal = {Journal of Music Theory Pedagogy},
   author = {Karpinski, Gary},
   year = {1990},
-  pages = {191-229}
+  pages = {191-229},
+  file = {/Users/davidjohnbaker/Zotero/storage/JHTF8BJE/Karpinski - 1990 - A Model for Music Perception and Its Implications .pdf}
 }
 
 @article{pembrookSendHelpAural1990,
@@ -1003,6 +925,345 @@ Basically article on IDyOM 101
   pages = {47-89},
   file = {/Users/davidjohnbaker/Zotero/storage/2SKE5RYL/baddeley1974.pdf},
   doi = {10.1016/S0079-7421(08)60452-1}
+}
+
+@article{arthurPerceptualStudyScaledegree2018,
+  title = {A {{Perceptual Study}} of {{Scale}}-Degree {{Qualia}} in {{Context}}},
+  volume = {35},
+  issn = {0730-7829, 1533-8312},
+  doi = {10.1525/mp.2018.35.3.295},
+  language = {en},
+  number = {3},
+  journal = {Music Perception: An Interdisciplinary Journal},
+  author = {Arthur, Claire},
+  month = feb,
+  year = {2018},
+  pages = {295-314},
+  file = {/Users/davidjohnbaker/Zotero/storage/GAQXAP9C/Arthur - 2018 - A Perceptual Study of Scale-degree Qualia in Conte.pdf}
+}
+
+@misc{Karpinkski1990Pdf,
+  title = {Karpinkski1990.Pdf},
+  file = {/Users/davidjohnbaker/Zotero/storage/NLMLSK6A/karpinkski1990.pdf},
+  annote = {Karpinski 1990 Notes
+
+says melodic dictation is important and we should teach it
+
+He says reasons that we do aural skills is really based on "vague aphorisms about relationships..."
+
+Not tons of experimental evidence, but case studies!
+
+Dictation stages!!
+
+~~~ Michael Rogers two stages
+
+~~~ Ronald Thomas 15!!
+
+Talks about problems with memory, Chunks
+
+~}
+}
+
+@book{ritchieIntelligenceAllThat2015,
+  series = {All that matters},
+  title = {Intelligence: {{All}} That Matters},
+  publisher = {{Hodder \& Stoughton}},
+  author = {Ritchie, Stuart},
+  year = {2015}
+}
+
+@book{gouldMismeasureMan1996,
+  title = {The Mismeasure of Man},
+  publisher = {{WW Norton \& Company}},
+  author = {Gould, Stephan Jay},
+  year = {1996}
+}
+
+@article{spearmanGeneralIntelligenceObjectively1904,
+  title = {"{{General Intelligence}}," {{Objectively Determined}} and {{Measured}}},
+  language = {en},
+  author = {Spearman, Charles},
+  year = {1904},
+  pages = {93},
+  file = {/Users/davidjohnbaker/Zotero/storage/ZEKBJLEP/General Intelligence, Objectively Determined and.pdf}
+}
+
+@book{darwinOriginSpecies1859,
+  title = {On the {{Origin}} of {{Species}}},
+  publisher = {{Routledge}},
+  author = {Darwin, Charles},
+  year = {1859}
+}
+
+@article{conwayWorkingMemorySpan2005,
+  title = {Working Memory Span Tasks: {{A}} Methodological Review and User's Guide},
+  volume = {12},
+  issn = {1069-9384, 1531-5320},
+  shorttitle = {Working Memory Span Tasks},
+  doi = {10.3758/BF03196772},
+  language = {en},
+  number = {5},
+  journal = {Psychonomic Bulletin \& Review},
+  author = {Conway, Andrew R. A. and Kane, Michael J. and Bunting, Michael F. and Hambrick, D. Zach and Wilhelm, Oliver and Engle, Randall W.},
+  month = oct,
+  year = {2005},
+  pages = {769-786},
+  file = {/Users/davidjohnbaker/Zotero/storage/QYDWS94E/Conway et al. - 2005 - Working memory span tasks A methodological review.pdf}
+}
+
+@book{krumhanslCognitiveFoundationsMusical2001,
+  title = {Cognitive {{Foundations}} of {{Musical Pitch}}},
+  publisher = {{Oxford University Press}},
+  author = {Krumhansl, Carol},
+  year = {2001}
+}
+
+@book{meyerEmotionMeaningMusic1956,
+  address = {Chicago},
+  title = {Emotion and {{Meaning}} in {{Music}}},
+  publisher = {{University of Chicago Press}},
+  author = {Meyer, Leonard},
+  year = {1956}
+}
+
+@book{millerHistoryPsychologyAutobiography1989,
+  address = {Stanford, CA},
+  edition = {L. Gardner},
+  title = {A History of Psychology in Autobiography},
+  volume = {VIII},
+  publisher = {{Stanford University Press}},
+  author = {Miller, George A},
+  year = {1989}
+}
+
+@book{huronSweetAnticipation2006,
+  title = {Sweet {{Anticipation}}},
+  publisher = {{MIT Press}},
+  author = {Huron, David},
+  year = {2006}
+}
+
+@book{schenkerFreieSatz1935,
+  title = {Der Freie {{Satz}}},
+  volume = {III},
+  publisher = {{Universal Edition}},
+  author = {Schenker, Heinrich},
+  year = {1935}
+}
+
+@article{pfordresherPoorPitchSingingAbsence2007,
+  title = {Poor-{{Pitch Singing}} in the {{Absence}} of "{{Tone Deafness}}"},
+  volume = {25},
+  issn = {07307829, 15338312},
+  doi = {10.1525/mp.2007.25.2.95},
+  language = {en},
+  number = {2},
+  journal = {Music Perception: An Interdisciplinary Journal},
+  author = {Pfordresher, Peter Q. and Brown, Steven},
+  month = dec,
+  year = {2007},
+  pages = {95-115},
+  file = {/Users/davidjohnbaker/Zotero/storage/BJB2WLQA/Pfordresher and Brown - 2007 - Poor-Pitch Singing in the Absence of Tone Deafnes.pdf}
+}
+
+@article{kopiezAufSucheNach2011,
+  title = {Auf Der {{Suche}} Nach Den ``{{Popularit\"atsfaktoren}}'' in Den {{Song}}-{{Melodien}} Des {{Beatles}}-{{Albums Revolver}}: {{Eine}} Computergest\"utzte {{Feature}}-{{Analyse}} [{{In}} Search of Features Explaining the Popularity of the Tunes from the {{Beatles}} Album {{Revolver}}: {{A}} Computer-Assisted Feature Analysis].},
+  journal = {Musik und Popularitat. Beitrage zu einer Kulturgeschichte zwischen},
+  author = {Kopiez, Reinhard and Mullensiefen, Daniel},
+  year = {2011},
+  pages = {207--225}
+}
+
+@article{bakerPerceptionLeitmotivesRichard2017,
+  title = {Perception of {{Leitmotives}} in {{Richard Wagner}}'s {{Der Ring}} Des {{Nibelungen}}},
+  volume = {8},
+  issn = {1664-1078},
+  doi = {10.3389/fpsyg.2017.00662},
+  abstract = {The music of Richard Wagner tends to generate very diverse judgments indicative of the complex relationship between listeners and the sophisticated musical structures in Wagner's music. This paper presents findings from two listening experiments using the music from Wagner's Der Ring des Nibelungen that explores musical as well as individual listener parameters to better understand how listeners are able to hear leitmotives, a compositional device closely associated with Wagner's music. Results confirm findings from a previous experiment showing that specific expertise with Wagner's music can account for a greater portion of the variance in an individual's ability to recognize and remember musical material compared to measures of generic musical training. Results also explore how acoustical distance of the leitmotives affects memory recognition using a chroma similarity measure. In addition, we show how characteristics of the compositional structure of the leitmotives contributes to their salience and memorability. A final model is then presented that accounts for the aforementioned individual differences factors, as well as parameters of musical surface and structure. Our results suggest that that future work in music perception may consider both individual differences variables beyond musical training, as well as symbolic features and audio commonly used in music information retrieval in order to build robust models of musical perception and cognition.},
+  language = {en},
+  journal = {Frontiers in Psychology},
+  author = {Baker, David J. and M\"ullensiefen, Daniel},
+  month = may,
+  year = {2017},
+  file = {/Users/davidjohnbaker/Zotero/storage/3EQGD29K/Baker and Müllensiefen - 2017 - Perception of Leitmotives in Richard Wagner's Der .pdf}
+}
+
+@article{harrisonModellingMelodicDiscrimination2016,
+  title = {Modelling {{Melodic Discrimination Tests}}: {{Descriptive}} and {{Explanatory Approaches}}},
+  volume = {45},
+  issn = {0929-8215, 1744-5027},
+  shorttitle = {Modelling {{Melodic Discrimination Tests}}},
+  doi = {10.1080/09298215.2016.1197953},
+  abstract = {Melodic discrimination tests have been used for many years to assess individual differences in musical abilities. These tests are usually analysed using classical test theory. However, classical test theory is not well-suited for optimising test efficiency or for investigating construct validity. This paper addresses this problem by applying modern item response modelling techniques to three melodic discrimination tests. First, descriptive item response modelling is used to develop a short melodic discrimination test from a larger item pool. The resulting test meets the test-theoretic assumptions of a Rasch item response model (Rasch, 1960) and possesses good concurrent and convergent validity as well as good testing efficiency. Second, an explicit cognitive model of melodic discrimination is used to generate hypotheses relating item difficulty to structural item features such as melodic complexity, similarity, and tonalness. These hypotheses are then tested on response data from three melodic discrimination tests (n = 317) using explanatory item response modelling. Results indicate that item difficulty is predicted by melodic complexity and melodic similarity, consistent with the proposed cognitive model. This provides useful evidence for construct validity. This paper therefore demonstrates the benefits of item response modelling both for efficient test construction and for test validity.},
+  language = {en},
+  number = {3},
+  journal = {Journal of New Music Research},
+  author = {Harrison, Peter M.C. and Musil, Jason Ji{\v r}\'i and M\"ullensiefen, Daniel},
+  month = jul,
+  year = {2016},
+  pages = {265-280},
+  file = {/Users/davidjohnbaker/Zotero/storage/FBMBJF5J/Harrison et al. - 2016 - Modelling Melodic Discrimination Tests Descriptiv.pdf}
+}
+
+@book{narmourAnalysisCognitionMelodic1992,
+  title = {The Analysis and Cognition of Melodic Complexity: {{The}} Implication-Realization Model},
+  publisher = {{University of Chicago Press}},
+  author = {Narmour, Eugene},
+  year = {1992}
+}
+
+@article{longRelationshipsPitchMemory1977,
+  title = {Relationships {{Between Pitch Memory}} in {{Short Melodies}} and {{Selected Factors}}},
+  volume = {25},
+  issn = {0022-4294, 1945-0095},
+  doi = {10.2307/3345268},
+  language = {en},
+  number = {4},
+  journal = {Journal of Research in Music Education},
+  author = {Long, Peggy A.},
+  month = dec,
+  year = {1977},
+  pages = {272-282},
+  file = {/Users/davidjohnbaker/Zotero/storage/3MNXRWD3/Long - 1977 - Relationships Between Pitch Memory in Short Melodi.pdf}
+}
+
+@misc{huronHumdrumToolkitReference1994,
+  title = {The {{Humdrum Toolkit}}: {{Reference Manual}}},
+  publisher = {{Center for Computer Assisted Research in the Humanities}},
+  author = {Huron, David},
+  year = {1994}
+}
+
+@article{cuthbertMusic21ToolkitComputerAided2010,
+  title = {Music21: {{A Toolkit}} for {{Computer}}-{{Aided Musicology}} and {{Symbolic Music Data}}},
+  abstract = {Music21 is an object-oriented toolkit for analyzing, searching, and transforming music in symbolic (scorebased) forms. The modular approach of the project allows musicians and researchers to write simple scripts rapidly and reuse them in other projects. The toolkit aims to provide powerful software tools integrated with sophisticated musical knowledge to both musicians with little programming experience (especially musicologists) and to programmers with only modest music theory skills.},
+  language = {en},
+  author = {Cuthbert, Michael Scott and Ariza, Christopher},
+  year = {2010},
+  pages = {7},
+  file = {/Users/davidjohnbaker/Zotero/storage/WGSXSFAW/Cuthbert and Ariza - 2010 - music21 A Toolkit for Computer-Aided Musicology a.pdf}
+}
+
+@article{schellenbergSimplifyingImplicationRealizationModel1997,
+  title = {Simplifying the {{Implication}}-{{Realization Model}} of {{Melodic Expectancy}}},
+  volume = {14},
+  issn = {07307829, 15338312},
+  doi = {10.2307/40285723},
+  language = {en},
+  number = {3},
+  journal = {Music Perception: An Interdisciplinary Journal},
+  author = {Schellenberg, E. Glenn},
+  month = apr,
+  year = {1997},
+  pages = {295-318},
+  file = {/Users/davidjohnbaker/Zotero/storage/2N54XJZL/Schellenberg - 1997 - Simplifying the Implication-Realization Model of M.pdf}
+}
+
+@article{norrisRelationshipSightSinging2003,
+  title = {The {{Relationship Between Sight Singing Achievement}} and {{Melodic Dictation Achievement}}},
+  volume = {30},
+  language = {en},
+  number = {1},
+  journal = {Contributions to Music Education},
+  author = {Norris, Charles},
+  year = {2003},
+  pages = {39-53},
+  file = {/Users/davidjohnbaker/Zotero/storage/ZSIBWDTK/The Relationship Between Sight Singing Achievement.pdf}
+}
+
+@article{gillespieMelodicDictationScoring2001,
+  title = {Melodic {{Dictation Scoring Methods}}: {{An Exploratory Study}}},
+  volume = {15},
+  language = {en},
+  journal = {Journal for Music Theory Pedagogy},
+  author = {Gillespie, Jeffrey L},
+  year = {2001},
+  file = {/Users/davidjohnbaker/Zotero/storage/CK9HXD85/Gillespie - Melodic Dictation Scoring Methods An Exploratory .pdf}
+}
+
+@article{dooleyAbsolutePitchCorrelates2010,
+  title = {Absolute Pitch Correlates with High Performance on Musical Dictation},
+  volume = {128},
+  issn = {0001-4966},
+  doi = {10.1121/1.3458848},
+  language = {en},
+  number = {2},
+  journal = {The Journal of the Acoustical Society of America},
+  author = {Dooley, Kevin and Deutsch, Diana},
+  month = aug,
+  year = {2010},
+  pages = {890-893},
+  file = {/Users/davidjohnbaker/Zotero/storage/6RYU3M24/Dooley and Deutsch - 2010 - Absolute pitch correlates with high performance on.pdf}
+}
+
+@article{hofstetterComputerBaesedRecognitionPerceptual1981,
+  title = {Computer-{{Baesed Recognition}} of {{Perceptual Patterns}} and {{Learning Styles}} in {{Rhythmic Dictation Exercises}}},
+  volume = {29},
+  issn = {0022-4294, 1945-0095},
+  doi = {10.2307/3345003},
+  language = {en},
+  number = {4},
+  journal = {Journal of Research in Music Education},
+  author = {Hofstetter, Fred T.},
+  month = dec,
+  year = {1981},
+  pages = {265-277},
+  file = {/Users/davidjohnbaker/Zotero/storage/89SF2UDT/Hofstetter - 1981 - Computer-Baesed Recognition of Perceptual Patterns.pdf}
+}
+
+@article{dowlingScaleContourTwo1978,
+  title = {Scale and {{Contour}}: {{Two Components}} of a {{Theory}} of {{Memory}} for {{Melodies}}},
+  volume = {84},
+  number = {4},
+  journal = {Psychological Review},
+  author = {Dowling, W. Jay},
+  year = {1978},
+  pages = {341-354},
+  file = {/Users/davidjohnbaker/Zotero/storage/PL5FEKYB/dowling1978.pdf}
+}
+
+@article{ouraMemoryMelodiesSubjects1988,
+  title = {Memory for {{Melodies}} among {{Subjects Differing}} in {{Age}} and {{Experience}} in {{Music}}},
+  volume = {16},
+  journal = {Psychology of Music},
+  author = {Oura, Yoko and Hatano, Giyoo},
+  year = {1988},
+  pages = {91-109},
+  file = {/Users/davidjohnbaker/Zotero/storage/3HZK8B6F/ouraHatano1988.pdf}
+}
+
+@article{schellenbergEffectTonalRhythmicContext1985,
+  title = {The {{Effect}} of {{Tonal}}-{{Rhythmic Context}} on {{Short}}-{{Term Memory}} of {{Rhythmic}} and {{Melodic Sequences}}},
+  language = {en},
+  number = {85},
+  journal = {Bulletin of the Council for Research in Music Education},
+  author = {Schellenberg, Stephen and Moore, Randall S.},
+  year = {1985},
+  pages = {207 -217},
+  file = {/Users/davidjohnbaker/Zotero/storage/YHV9CIGN/Schellenberg and Moore - 1985 - The Effect of Tonal-Rhythmic Context on Short-Term.pdf}
+}
+
+@article{taylorStrategiesMemoryShort1983,
+  title = {Strategies in Memory for Short Melodies: {{An}} Extension of {{Otto Ortmann}}'s 1933 Study.},
+  volume = {3},
+  issn = {2162-1535, 0275-3987},
+  shorttitle = {Strategies in Memory for Short Melodies},
+  doi = {10.1037/h0094258},
+  language = {en},
+  number = {1},
+  journal = {Psychomusicology: A Journal of Research in Music Cognition},
+  author = {Taylor, Jack A. and Pembrook, Randall G.},
+  year = {1983},
+  pages = {16-35},
+  file = {/Users/davidjohnbaker/Zotero/storage/YKRSQZHW/Taylor and Pembrook - 1983 - Strategies in memory for short melodies An extens.pdf}
+}
+
+@book{narmourAnalysisCognitionBasic1990,
+  address = {Chicago},
+  title = {The Analysis and Cognition of Basic Melodic Structures: {{The}} Implication-Realization Model.},
+  publisher = {{University of Chicago Press}},
+  author = {Narmour, Eugene},
+  year = {1990}
 }
 
 
